# dummyrepo

./: .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CHANGELOG.md  CLAUDE.md  Dockerfile  GITHUB_CICD_README.md  INSTALL_WINDOWS.md  Makefile  README.md  mkdocs.yml  notebook-extras.py  pr-description.md  pyproject.toml  setup-local-linux.sh  setup.py
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json  startup.sh
.github/: renovate.json  template.yml
.github/workflows/: pages.yml  pre-commit.yml  release.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_devcontainer.yml  rhiza_docker.yml  rhiza_marimo.yml  rhiza_mypy.yml  rhiza_release.yml  rhiza_security.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml  sync-configs.yml
.gitlab/workflows/: rhiza_book.yml  rhiza_ci.yml
.rhiza/: history  rhiza.mk  template-bundles.yml  template.yml
.rhiza/scripts/: check_managed_files.py  validate_template_bundles.py
.rhiza/scripts/customisations/: build-extras.sh
.rhiza/tests/structure/: test_template_bundles.py
book/marimo/: demo.py  notebook-extras.py
book/marimo/notebooks/: demo.py  notebook-extras.py
docker/: Dockerfile  docker.mk
docs/: index.md
docs/api/: grid.md  payoffs.md  things.md
dummypy/: things.py
notebooks/: demo.ipynb  test.ipynb
src/dummypy/: __init__.py  grid.py  payoffs.py  things.py
tests/: Makefile.tests  test_payoffs.py  test_things.py  test_version.py
tests/dummypy/: __init__.py  test_grid.py  test_payoffs.py  test_things.py
tests/fuzz/: fuzz_grid.py
tests/test_rhiza/: test_book.py  test_makefile.py  test_notebooks.py  test_rhiza_workflows.py  test_template_bundles.py
