[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummypy"
version = "0.1.1"
description = "A dummy Python analytics library for demonstration purposes."
authors = [{ name = "Mark Richardson", email = "mrichardson82@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dummypy", "analytics", "demo", "example"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=2.2",
    "attrs>=25.3",
    "pandas>=2.2",
]

# dependencies only needed by the notebooks
[dependency-groups]
notebook = [
    "loman>=0.5.5",
]

dev = [
    "marimo>=0.23.2",
    "plotly>=6.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dummypy"]

[tool.deptry.package_module_name_map]
marimo = "marimo"
pandas = "pandas"
loman = "loman"
attrs = "attrs"
numpy = "numpy"
plotly = "plotly"

